--- a/package.json
+++ b/package.json
@@ -9,9 +9,25 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.37.1",
+    "@langchain/community": "^1.1.10",
+    "@langchain/core": "^1.1.18",
+    "@langchain/groq": "^1.0.4",
+    "@langchain/langgraph": "^1.1.2",
+    "@langchain/openai": "^1.2.4",
+    "@supabase/supabase-js": "^2.93.3",
+    "axios": "^1.13.4",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.29.2",
+    "js-yaml": "^4.1.1",
+    "jspdf": "^4.0.0",
+    "lucide-react": "^0.563.0",
     "next": "16.1.6",
+    "pdf-parse": "^2.4.5",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "tailwind-merge": "^3.4.0",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
